update Movie Details page

--- a/E-Ticket/Views/Producers/Details.cshtml
+++ b/E-Ticket/Views/Producers/Details.cshtml
@@ -7,7 +7,7 @@
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h1>Details for @Model.Picture</h1>
+            <h1>Details for @Model.Name</h1>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
@@ -20,9 +20,9 @@
                     <span asp-validation-for="Picture" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Picture" class="control-label"></label>
-                    <input asp-for="Picture" class="form-control" readonly />
-                    <span asp-validation-for="Picture" class="text-danger"></span>
+                    <label asp-for="Name" class="control-label"></label>
+                    <input asp-for="Name" class="form-control" readonly />
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Bio" class="control-label"></label>
