--- a/E-Ticket/Views/Actors/Create.cshtml
+++ b/E-Ticket/Views/Actors/Create.cshtml
@@ -15,7 +15,7 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <div class="form-group text-center">
-                        <img id="ProfilePicturePreview" class="border-info rounded-circle" style="width:150px; height:150px; overflow:hidden" />
+                        <img id="ProfilePicturePreview"  class="border-info rounded-circle" style="max-width: 150px" />
                     </div>
                     <div class="form-group">
                         <label asp-for="Picture" class="control-label"></label>
@@ -43,8 +43,9 @@
     </div>
 </div>
 
-@section Scripts{
+@section Scripts{ 
     <script>
+
         $(document).ready(function () {
             var output = document.getElementById('ProfilePicturePreview');
             output.src = $("#Picture").val();
