--- a/E-Ticket/Views/Actors/Delete.cshtml
+++ b/E-Ticket/Views/Actors/Delete.cshtml
@@ -12,17 +12,17 @@
         <div class="row">
             <div class="col-md-8 offset-2">
                     <div class="form-group text-center">
-                    <img class="border-info rounded-circle" style="width:150px; height:150px; overflow:hidden" id="ProfilePicturePreview" />
+                        <img class="border-info rounded-circle" style="max-width: 150px" id="ProfilePicturePreview" />
                     </div>
                     <div class="form-group">
                         <label asp-for="Picture" class="control-label"></label>
-                    <input asp-for="Picture" class="form-control" readonly />
-                    <span asp-validation-for="Picture" class="text-danger"></span>
+                        <input asp-for="Picture" class="form-control" readonly />
+                        <span asp-validation-for="Picture" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                    <label asp-for="Name" class="control-label"></label>
-                    <input asp-for="Name" class="form-control" readonly />
-                    <span asp-validation-for="Name" class="text-danger"></span>
+                        <label asp-for="Name" class="control-label"></label>
+                        <input asp-for="Name" class="form-control" readonly />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Bio" class="control-label"></label>
