--- a/E-Ticket/Views/Actors/Index.cshtml
+++ b/E-Ticket/Views/Actors/Index.cshtml
@@ -13,29 +13,35 @@
                     <th>@Html.DisplayNameFor(model => model.Picture)</th>
                     <th>@Html.DisplayNameFor(model => model.Name)</th>
                     <th>@Html.DisplayNameFor(model => model.Bio)</th>
-                    <th>Actions</th>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <th>Actions</th>
+                    }
                 </tr>
             </thead>
             <tbody>
                 @foreach (var item in Model)
                 {
-                    <tr>
-                        <td class="align-middle">
-                            <img class="rounded-circle" src="@item.Picture" alt="@item.Name" style="width:150px; height:150px; overflow:hidden" />
-                        </td>
-                        <td class="align-middle">
-                            @Html.DisplayFor(modelItem => item.Name)
-                        </td>
-                        <td class="align-middle">
-                            @Html.DisplayFor(modelItem => item.Bio)
-                        </td>
+                <tr>
+                    <td class="align-middle">
+                        <img class="rounded-circle" src="@item.Picture" alt="@item.Name" style="max-width: 150px" />
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.Bio)
+                    </td>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
                         <td class="align-middle">
                             <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i>Edit </a> |
                             <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye"></i>Details </a> |
                             <a class="btn btn-danger text-white" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash"></i>Delete </a>
                         </td>
+                    }
 
-                    </tr>
+                </tr>
                 }
             </tbody>
 
@@ -43,6 +49,5 @@
 
     </div>
 </div>
-<div class="float-right fixed">
-    <a class="btn btn-outline-success" asp-action="Create">Add new actor</a>
-</div>
+
+@await Html.PartialAsync("_CreateItem", "Actors") 
