--- a/E-Ticket/Views/Cinemas/Index.cshtml
+++ b/E-Ticket/Views/Cinemas/Index.cshtml
@@ -17,26 +17,29 @@
                     {
                         <th>Actions</th>
                     }
-                </tr>
+                    </tr>
             </thead>
             <tbody>
                 @foreach (var item in Model)
                 {
-                    <tr>
-                        <td class="align-middle">
-                            <img class="rounded-circle" src="@item.Logo" alt="@item.Name" style="width:150px; height:150px; overflow:hidden" />
-                        </td>
-                        <td class="align-middle">
-                            @Html.DisplayFor(modelItem => item.Name)
-                        </td>
-                        <td class="align-middle">
-                            @Html.DisplayFor(modelItem => item.Description)
-                        </td>
+                <tr>
+                    <td class="align-middle">
+                        <img class="rounded-circle" src="@item.Logo" alt="@item.Name" style="max-width: 150px" />
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
                         <td class="align-middle">
                             <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i>Edit </a> |
                             <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye"></i>Details </a> |
                             <a class="btn btn-danger text-white" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash"></i>Delete </a>
                         </td>
+                    }
                     </tr>
                 }
             </tbody>
@@ -45,3 +48,5 @@
 
     </div>
 </div>
+
+@await Html.PartialAsync("_CreateItem", "Cinemas") 
