--- a/E-Ticket/Views/Producers/Create.cshtml
+++ b/E-Ticket/Views/Producers/Create.cshtml
@@ -15,7 +15,7 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <div class="form-group text-center">
-                        <img id="ProfilePicturePreview" class="border-info rounded-circle" style="width:150px; height:150px; overflow:hidden" />
+                        <img id="ProfilePicturePreview" class="border-info rounded-circle" style="max-width: 150px" />
                     </div>
                     <div class="form-group">
                         <label asp-for="Picture" class="control-label"></label>
