--- a/E-Ticket/Views/Movies/Edit.cshtml
+++ b/E-Ticket/Views/Movies/Edit.cshtml
@@ -40,9 +40,9 @@
                                 <span asp-validation-for="Price" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="ImageURL" class="control-label"></label>
-                                <input asp-for="ImageURL" class="form-control" />
-                                <span asp-validation-for="ImageURL" class="text-danger"></span>
+                                <label asp-for="Poster" class="control-label"></label>
+                                <input asp-for="Poster" class="form-control" />
+                                <span asp-validation-for="Poster" class="text-danger"></span>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -52,9 +52,9 @@
                                 <span asp-validation-for="CinemaId" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="MovieCategory" class="control-label"></label>
-                                <select asp-for="MovieCategory" class="form-control" asp-items="Html.GetEnumSelectList<Category>()"></select>
-                                <span asp-validation-for="MovieCategory" class="text-danger"></span>
+                                <label asp-for="Category" class="control-label"></label>
+                                <select asp-for="Category" class="form-control" asp-items="Html.GetEnumSelectList<Category>()"></select>
+                                <span asp-validation-for="Category" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label asp-for="ProducerId" class="control-label"></label>
